laborations/lab2/testsuite/good/double__inc_dec.cc
int main() {
  double d = 2.0;
  printDouble(d);
  d++;
  printDouble(d);
  d--;
  printDouble(d);

  return 0;
}
